Tomcat并发线程数配置

--- a/xbqx-thread/src/main/resources/application.yml
+++ b/xbqx-thread/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 9999
+  tomcat: # Tomcat 默认并发数配置
+    accept-count: 100 # 默认配置 如果Tomcat的线程忙于响应,新来的连接会进入队列，如果超出排队大小,则拒绝连接(等待队列的大小)
+    max-connections: 8192 # 默认配置 瞬时最大连接数 超出的会排队等待(并发连接数)
+    threads:
+      max: 200 # 默认配置 Tomcat能启动用来处理请求的最大线程数，如果请求处理量远远大于最大线程数则可能会僵死。(请求处理线程的数量)
+      min-spare: 10 # 默认配置 最小线程工作数
