--- a/xbqx-thread/pom.xml
+++ b/xbqx-thread/pom.xml
@@ -35,6 +35,13 @@
             <artifactId>hutool-all</artifactId>
             <version>5.4.2</version>
         </dependency>
+
+        <!--guava(RateLimiter)-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
