--- a/xbqx-thread/pom.xml
+++ b/xbqx-thread/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>guava</artifactId>
             <version>22.0</version>
         </dependency>
+        <!--        fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.83</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
