--- a/xbqx-thread/pom.xml
+++ b/xbqx-thread/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.83</version>
         </dependency>
+
+        <!--2024/09/05 新增事务依赖-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
