--- a/xbqx-thread/pom.xml
+++ b/xbqx-thread/pom.xml
@@ -62,6 +62,14 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+
+        <!--阿里巴巴包下的ThreadLocal，解决线程池场景下变量的传递问题-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.11.4</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
