--- a/xbqx-thread/pom.xml
+++ b/xbqx-thread/pom.xml
@@ -69,7 +69,11 @@
             <artifactId>transmittable-thread-local</artifactId>
             <version>2.11.4</version>
         </dependency>
-
+        <!--引入@Index注解包解析-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-indexer</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
