--- a/xbqx-likou/pom.xml
+++ b/xbqx-likou/pom.xml
@@ -28,6 +28,13 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.22</version>
         </dependency>
+
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
