--- a/xbqx-likou/pom.xml
+++ b/xbqx-likou/pom.xml
@@ -35,6 +35,13 @@
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
         </dependency>
+
+        <!--json-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.32</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
