--- a/xbqx-java-base/pom.xml
+++ b/xbqx-java-base/pom.xml
@@ -39,6 +39,19 @@
       <version>1.18.30</version>
       <scope>provided</scope>
     </dependency>
+
+    <!--lombok插件-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
+    </dependency>
+    <!--hutool包-->
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>5.8.22</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -46,8 +59,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>9</source>
-          <target>9</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
     </plugins>
